--- a/autobahnassignment/src/index.css
+++ b/autobahnassignment/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(167,243,208);
+background: linear-gradient(90deg, rgba(167,243,208,1) 0%, rgba(199,210,254,1) 35%, rgba(251,207,232,1) 100%);
 }
 
 code {
